--- a/uvoz/auth.template
+++ b/uvoz/auth.template
@@ -1,4 +1,4 @@
-# Skopiraj datoteko v auth.py ali auth.R in vnesi podatke za priklop na bazo
+# Skopiraj datoteko v auth.py in vnesi podatke za priklop na bazo
 db = 'sem2020_uporabnik'
 host = 'baza.fmf.uni-lj.si'
 user = 'uporabnik'
